Update church ms

--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
@@ -319,16 +319,16 @@ health, and meaning-making (\citeproc{ref-chen2020religious}{Chen
 \citeproc{ref-vanderweele2022invited_church}{VanderWeele \emph{et al.}
 2022}). These studies have demonstrated that, on average, individuals
 who attend services report more favourable social and psychological
-outcomes.
+outcomes. Is this association causal? For whom?
 
-Although several studies have applied rigorous causal methods
+Although recent studies have applied causal methods
 (\citeproc{ref-vanderweelechurchmortality}{Li \emph{et al.} 2016};
 \citeproc{ref-pawlikowski2019religious}{Pawlikowski \emph{et al.} 2019};
 \citeproc{ref-vanderweele2021effectsReligiousServiceMetanalysis}{VanderWeele
 2021}; \citeproc{ref-vanderweele2020vchenrespond}{VanderWeele and Chen
-2020}), debates over causality persist
+2020}), debates over their implications persist
 (\citeproc{ref-highland2019attitudes}{Highland \emph{et al.} 2019}).
-Many investigations do not fully adjust for baseline health or baseline
+Some investigations do not fully adjust for baseline health or baseline
 religious service attendance, nor other critical confounders affecting
 both religious participation and well-being
 (\citeproc{ref-brown2023_church}{Brown \emph{et al.} 2023};
@@ -342,11 +342,11 @@ report about five per cent higher life satisfaction than infrequent
 attenders, though unmeasured confounding or reverse causation could
 explain this association.
 
-Despite a growing causal inference literature, many questions remain.
 Existing work often relies on non-representative samples or
 predominantly religious settings, rarely incorporates time-varying
-confounders, and seldom examines populations with relatively low
-religious engagement. Brown \emph{et al.}
+confounders, and seldom examines populations outside the north atlantic
+(\citeproc{ref-price2024science}{Price and Johnson 2024}), or in
+societies with relatively low religious engagement. Brown \emph{et al.}
 (\citeproc{ref-brown2023_church}{2023}) propose that community-building
 itself, rather than specifically religious community-building, may
 explain well-being benefits. Supporting evidence from New Zealand shows
@@ -428,7 +428,8 @@ residents in New Zealand Attitudes and Values Study wave 10 (years
 
 \subsubsection{Treatment Indicator}\label{treatment-indicator}
 
-We assessed religious service attendance using the following question:
+The New Zealand Attitudes and Values Study assesses religious service
+attendance using the following question:
 
 \begin{itemize}
 \tightlist
@@ -438,47 +439,63 @@ We assessed religious service attendance using the following question:
   last month?}
 \end{itemize}
 
-Responses were rounded to the nearest whole number. Because few
+We rounded response to the nearest whole number. Because few
 participants reported attending more than eight times, we capped
 responses above eight at eight (refer to
 \hyperref[appendix-baseline]{Appendix B}, variable
-\texttt{religion\_church\_round}). In the regular church service
-condition, we did not intervene on responses greater than four to reduce
-computational burdens during estimation.
+\texttt{religion\_church\_round}).
 
 \subsubsection{Baseline Covariates}\label{baseline-covariates}
 
-We controlled for a broad range of baseline variables measured at NZAVS
-time 10 (Wave 2018--2019) to reduce confounding by demographic,
-personality, and behavioural factors (see
-\hyperref[appendix-baseline]{Appendix B} for full measures). These
-included age, gender, ethnicity, education level, personality traits
-(Agreeableness, Conscientiousness, Extraversion, Honesty-Humility,
-Neuroticism, and Openness), household income, employment status,
-parenting status, relationship status, religious belonging, and
-health-related behaviours (e.g.~smoking, alcohol use, hours spent
-exercising). We also controlled for all outcome measures and for
-religious service attendance at baseline to minimise reverse causation
-(refer to \hyperref[appendix-baseline]{Appendix B} and
-\hyperref[appendix-confounding]{Appendix C}).
+We adjusted for a rich set of demographic, personality, and behavioural
+indicators measured at the baseline wave, NZAVS time 10 (Wave 2018,
+years 2018-2019) (see \hyperref[appendix-baseline]{Appendix B} for full
+measures). These variables included age, gender, ethnicity, education
+level, personality traits (Agreeableness, Conscientiousness,
+Extraversion, Honesty-Humility, Neuroticism, and Openness), household
+income, employment status, parenting status, relationship status,
+religious belonging, and health-related behaviours (e.g.~smoking,
+alcohol use, hours spent exercising). We selected only those outcome
+variables measured in the baseline wave and controlled for these
+variables. Moreover we controlled for religious service attendance at
+baseline (refer to \hyperref[appendix-baseline]{Appendix B} and
+\hyperref[appendix-confounding]{Appendix C}) This strategy of
+confounding control is powerful because for any confounder to affect
+subsequent treatments and the outcome, it would need to do so
+independently of the baseline outcome variables, the baseline exposure,
+and the rich set of demographic indicators measured at baseline
+(\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}).
 
 \subsubsection{Outcomes}\label{outcomes}
 
-We investigate well-being using an ``outcome-wide'' approach
-(\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}). We
-categorised outcomes into five domains---health, psychological
-well-being, present-reflective outcomes, life-reflective outcomes, and
-social outcomes---based on validated scales and measures, using the
-outcomes developed in (\citeproc{ref-pedro_2024effects}{Rosa \emph{et
-al.} 2024}). Table 1 summarises each domain and its associated measures.
-For instance, health outcomes included BMI and hours of sleep, whereas
-psychological well-being encompassed anxiety and depression. Outcomes
-were converted to z-scores (standardised) to facilitate comparison.
-Thus, the effects may be interpreted as effect sizes.
+We investigate well-being using an VanderWeele and colleague's
+``outcome-wide'' approach. We categorised outcomes into five
+domains---health, psychological well-being, present-reflective outcomes,
+life-reflective outcomes, and social outcomes---based on validated
+scales and measures. Outcomes were based on those modelled in an earlier
+outcome-wide paper Rosa \emph{et al.}
+(\citeproc{ref-pedro_2024effects}{2024}). Table~\ref{tbl-outcomes}
+summarises each domain and its associated measures. For instance, health
+outcomes included BMI and hours of sleep, whereas psychological
+well-being included anxiety and depression. Outcomes were converted to
+z-scores (standardised), and the causal effect estimates may be
+therefore be interpreted as effect sizes.
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.2787}}
   >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.7213}}@{}}
+\caption{Outcome domains and example dimensions. Data summaries for all
+measures used in this study are provided in
+\hyperref[appendix-baseline]{Appendix
+B}.}\label{tbl-outcomes}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Domain
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Example Measures
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Domain
@@ -497,9 +514,6 @@ Life-Reflective & Gratitude, Life Satisfaction, Meaning (Sense \&
 Purpose) \\
 Social & Belonging, Support, Community \\
 \end{longtable}
-
-Data summaries for all measures used in this study are provided in
-\hyperref[appendix-baseline]{Appendix B}.
 
 \subsubsection{Causal Interventions}\label{causal-interventions}
 
@@ -526,10 +540,12 @@ at the final wave?''
 
 To answer this, we compare two hypothetical interventions. Each
 intervention shifts religious service attendance across four exposure
-waves (Waves 1--4), with outcomes measured at Wave 5. We control for a
-rich set of baseline covariates (from Wave 0) and time-varying
-confounders. We maximise sample size and statistical power by using the
-six most recent NZAVS waves (Waves 10--15).
+waves, with outcomes measured after the year following the fourth
+exposure wave. Again, we control for a rich set of baseline covariates
+in the wave before the first exposure wave as well as for time-varying
+confounders at each exposure wave (refer to @Table~\ref{tbl-plan}). We
+using the six most recent NZAVS waves (Times 10--15) because Wave 10
+containes the largest cohort, enabling us to maximise power.
 
 Following the modified treatment policies approach, we define
 \textbf{shift functions} describing each intervention:
@@ -545,34 +561,6 @@ Following the modified treatment policies approach, we define
   At each wave, if attendance is above zero, we shift it to zero;
   otherwise, we leave it unchanged.
 \end{enumerate}
-
-We then organise our data to resemble a randomised experiment that
-assigns each person to one of these two strategies, clearly specifying
-the treatment plans, timing of interventions, assignment procedures, and
-analysis plan to account for confounders. We define a ``confounder'' is
-a variable that, once included in the model, along with other included
-variables, removes any non-causal association between the treatment and
-outcome. Here, we adjust for confounders measured at baseline (Wave 0),
-such as demographic variables, personality traits, and prior well-being.
-We also adjust for time-varying confounders at each wave (physical
-disability, employment status, partner status, and parenting status). We
-assume these variables can influence religious service attendance and
-later well-being, potentially biasing our estimates.
-
-\subsubsection{Causal Contrasts}\label{causal-contrasts}
-
-Table~\ref{tbl-plan} outlines each regime we estimated. We compared the
-average expected outcome under each regime to that under the ``no
-attendance'' regime, estimating contrasts on the difference scale (i.e.,
-subtracting the expected outcome under ``no attendance'' from that under
-``regular attendance''). Confidence intervals were obtained using the
-cross-fitted influence-function approach in the \texttt{lmtp} package
-(\citeproc{ref-williams2021}{Williams and Díaz 2021}). This approach
-employs sequentially doubly robust (SDR) estimators, as developed by
-Díaz \emph{et al.} (\citeproc{ref-diaz2021_non_parametric_lmtp}{2021a})
-and co-authors, which remain valid if either the outcome model or the
-propensity model is correctly specified, thereby requiring weaker
-assumptions than standard approaches.
 
 \begin{table}
 
@@ -596,19 +584,39 @@ treatment.}
 
 \end{table}%
 
-By adopting the target trial framework and leveraging the six most
-recent NZAVS waves, we aim to rigorously estimate the causal effects of
-religious service attendance on multi-dimensional well-being.
-Table~\ref{tbl-plan} shows the two sequential treatments we contrast:
-one in which everyone attends religious services regularly for four
-years and one in which no one attends for four years. We adjust for
-confounders at baseline and in each subsequent wave. We ensure there is
-no reverse causation by measuring the outcomes at the end of the study,
-one year after the final treatment wave. By setting up our data as if it
-came from a hypothetical experiment, we gain clarity about which causal
-effects we are estimating and as well as confidence about our causal
-effect estimates (refer to Hernan and Robins
-(\citeproc{ref-hernan2024WHATIF}{2024}), Bulbulia
+We then organise our data to resemble a randomised sequential experiment
+that assigns each person to one of two longitudinal treatment strategies
+``regular religious service for four waves'' and ``no religious service
+for four waves.'' We define a ``confounder'' is a variable that, once
+included in the model, along with other included variables, removes any
+non-causal association between the treatment and outcome. Here, as
+mentioned, we adjust for a rich set of demographic and personality
+variables, as well as baseline religious service attendance and baseline
+measures of all outcomes. We also adjust for time-varying confounders at
+each wave (physical disability, employment status, partner status, and
+parenting status). We assume these time-varying confounders can
+influence religious service attendance and later well-being, potentially
+biasing our estimates. We ensure there is no reverse causation by
+measuring the outcomes at the end of the study, one year after the final
+treatment wave.
+
+\subsubsection{Causal Contrasts}\label{causal-contrasts}
+
+We compared the average expected outcome under the ``regular
+attendance'' and ``no attendance'' regime, estimating contrasts on the
+difference scale (i.e., subtracting the expected outcome under ``no
+attendance'' from that under ``regular attendance''). We obtained
+confidence intervals using the cross-fitted influence-function approach
+in the \texttt{lmtp} package (\citeproc{ref-williams2021}{Williams and
+Díaz 2021}). This approach employs sequentially doubly robust (SDR)
+estimator, as developed by Díaz \emph{et al.}
+(\citeproc{ref-diaz2021_non_parametric_lmtp}{2021a}), which remains
+valid if either the outcome model or the propensity model is correctly
+specified, thereby requiring weaker assumptions than standard
+approaches. By setting up our data as if it came from a hypothetical
+experiment, we gain clarity about which causal effects we are estimating
+and as well as confidence about our causal effect estimates (refer to
+Hernan and Robins (\citeproc{ref-hernan2024WHATIF}{2024}), Bulbulia
 (\citeproc{ref-bulbulia2022}{2023a}); Bulbulia
 (\citeproc{ref-bulbulia2023}{2024b})).
 
@@ -619,61 +627,65 @@ no-unmeasured confounding, causal consistency, and positivity (refer to
 \hyperref[appendix-transition]{Appendix E}). Again, the target
 population is all adults in New Zealand from the years 2018-2024.
 
-Importantly, although both growth models and causal inference methods
-pertain to questions about changes over time, they focus on different
+\subsubsection{Comment on Methods for Causal Inference Compared with
+Growth Curve
+Analysis}\label{comment-on-methods-for-causal-inference-compared-with-growth-curve-analysis}
+
+Although both growth models and causal inference methods pertain to
+questions about changes over time, each method focusses on different
 questions. Growth models quantify how individuals vary in their natural
 trajectories. In contrast, causal models explicitly ask: ``What happens
-if we intervene?'' By defining hypothetical interventions, adjusting for
-confounders, and specifying assumptions, researchers can rigorously
-address ``what if'' questions, bridging the gap between observational
-data and actionable insights. This approach opens new avenues for
-psychological scientists to design and evaluate interventions that might
-guide policy and practice with evidence.
+if we intervene?'' -- which of course requires that we define the
+interventions we seek to compare. By clearly defining the series of
+interventions to be compared, adjusting for confounders, and ensuring
+that outcomes are measured after the interventions, investigators can
+rigorously address ``what if?'' questions, bridging the gap between
+observational data and actionable insights. Causal inference opens new
+avenues for psychological scientists to design and evaluate
+interventions that might guide policy and practice with evidence. Such
+advice cannot be obtained from statistical models of change over time,
+no matter how sophisticated (\citeproc{ref-hernan2024WHATIF}{Hernan and
+Robins 2024}).
 
 \subsubsection{Statistical Estimator}\label{statistical-estimator}
 
-We estimate the causal effect of modified treatment policies over time
-using a semi-parametric Sequential Doubly-Robust estimator from the
-\texttt{lmtp} package (\citeproc{ref-williams2021}{Williams and Díaz
-2021}). The SDR algorithm proceeds in two steps. First, machine learning
-algorithms flexibly model the relationships among treatments,
-covariates, and outcomes, allowing SDR to capture complex,
-high-dimensional covariate structures without strict model assumptions.
-This step yields an initial set of estimates
-(\citeproc{ref-duxedaz2021}{Díaz \emph{et al.} 2021b}). In the second
-step, SDR ``targets'' these initial estimates by incorporating observed
-data distribution information, improving the accuracy of the causal
-effect estimate through an iterative process. The SDR estimator is
-multiply robust for repeated treatments across multiple waves
-(\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
-\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}), improving model
-robustness to misspecification in either the outcome or treatment model.
-The \texttt{lmtp} package relies on the \texttt{SuperLearner} library in
-R, which integrates diverse machine learning algorithms
+We estimate causal effects of time-varying treatment policies using a
+Sequential Doubly-Robust (SDR) estimator in the \texttt{lmtp} package
+(\citeproc{ref-williams2021}{Williams and Díaz 2021}). SDR proceeds in
+two steps. First, we use machine learning to flexibly model
+relationships among treatments, covariates, and outcomes. This approach
+captures complex, high-dimensional structures without strict assumptions
+(\citeproc{ref-duxedaz2021}{Díaz \emph{et al.} 2021b}). Second, SDR
+``targets'' these initial estimates by incorporating information from
+the observed data distribution. This step iteratively refines the
+accuracy of our causal estimates.
+
+The SDR estimator is multiply robust when treatments repeat over
+multiple waves (\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
+\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}). This design
+maintains consistency if either the outcome model or treatment model is
+correctly specified. The \texttt{lmtp} package relies on the
+\texttt{SuperLearner} library in R
 (\citeproc{ref-SuperLearner2023}{Polley \emph{et al.} 2023b}). We used
-the \texttt{SL.ranger}, \texttt{SL.glmnet}, and \texttt{SL.xgboost}
+\texttt{SL.ranger}, \texttt{SL.glmnet}, and \texttt{SL.xgboost}
 (\citeproc{ref-xgboost2023}{Chen \emph{et al.} 2023};
 \citeproc{ref-polley2023}{Polley \emph{et al.} 2023a};
-\citeproc{ref-Ranger2017}{Wright and Ziegler 2017}) learners.
-\textbf{\texttt{SL.ranger}}: implements a random forest algorithm that
-handles non-linear relationships and complex patterns, improving model
-accuracy but potentially increasing variance.
-\textbf{\texttt{SL.glmnet}}: provides regularised linear models that
-help manage high dimensionality and collinearity, effectively reducing
-model variance and improving stability. \textbf{\texttt{SL.xgboost}}:
-uses gradient boosting to optimise performance and capture complex
-interactions, balancing the model's ability to explore data complexities
-without overfitting (\citeproc{ref-polley2023}{Polley \emph{et al.}
-2023a}). The ensemble approach of \texttt{superlearner} optimally
-combines predictions from these models. Graphs, tables and output
-reports were created using the \texttt{margot} package
-(\citeproc{ref-margot2024}{Bulbulia 2024a}). For further details of the
-targeted learning using \texttt{lmtp} see
+\citeproc{ref-Ranger2017}{Wright and Ziegler 2017}) as our base
+learners. \textbf{\texttt{SL.ranger}}: implements a random forest
+algorithm, capturing non-linear relationships and complex interactions.
+\textbf{\texttt{SL.glmnet}}: provides regularised linear models for
+high-dimensional data. \textbf{\texttt{SL.xgboost}}: uses gradient
+boosting to capture intricate patterns without over-fitting.
+
+\texttt{SuperLearner} combines these learners adaptively to optimise
+predictive performance. We created graphs, tables, and output reports
+with the \texttt{margot} package (\citeproc{ref-margot2024}{Bulbulia
+2024a}). For more details on targeted learning with \texttt{lmtp}, see
 (\citeproc{ref-duxedaz2021}{Díaz \emph{et al.} 2021b};
 \citeproc{ref-hoffman2022}{Hoffman \emph{et al.} 2022},
 \citeproc{ref-hoffman2023}{2023}).
 
-\subsubsection{Hanling of Missing Data}\label{hanling-of-missing-data}
+\subsubsection{Handling of Missing Data}\label{handling-of-missing-data}
 
 \paragraph{Baseline Missingness}\label{baseline-missingness}
 
@@ -683,7 +695,8 @@ baseline values (comprising 1.2942581 of the baseline data). Following
 (\citeproc{ref-zhang2023shouldMultipleImputation}{Zhang \emph{et al.}
 2023}), we performed single imputation using only baseline data. For
 each column with missing values, we created a binary indicator of
-missingness so that estimation could condition on these indicators (see
+missingness so that the machine learning algorithms we employed could
+condition on missingness information during estimation (see
 \texttt{lmtp} documentation (\citeproc{ref-williams2021}{Williams and
 Díaz 2021})).
 
@@ -692,17 +705,18 @@ Variables}\label{missingness-in-time-varying-variables}
 
 When a time-varying value was missing in any wave but a future value was
 observed, we carried forward the previous response and included a
-missingness indicator. This approach let nonparametric machine learners
-account for missingness patterns. If no future value was observed, we
-considered the participant censored and used inverse probability of
-treatment weights to address attrition.
+missingness indicator. Again, this approach let the patterns of
+missingness inform nonparametric machine learnering. If no future value
+was observed, we considered the participant censored and used inverse
+probability of treatment weights to address attrition.
 
 \paragraph{Outcome Missingness}\label{outcome-missingness}
 
 Finally, to handle confounding and selection bias arising from missing
-outcomes and panel attrition, we applied censoring weights, estimated
-via nonparametric machine learning ensembles in the \texttt{lmtp}
-package (\citeproc{ref-williams2021}{Williams and Díaz 2021}).
+outcomes and panel attrition, we applied inverse probability of
+censoring weights, estimated via nonparametric machine learning
+ensembles in the \texttt{lmtp} package
+(\citeproc{ref-williams2021}{Williams and Díaz 2021}).
 
 \subsubsection{Sensitivity Analysis}\label{sensitivity-analysis}
 
@@ -1097,17 +1111,17 @@ if it confers biological advantages, is not a universal ``default''
 cognitive state (\citeproc{ref-sterelny2018religion}{Sterelny 2018})?
 Some evolutionary investigators suggest that religious activity might
 function partly as a hard-to-fake signal of commitment rather than as an
-end in itself {[}sosis2003cooperation{]}. Another compatible explanation
-is that religious service confers purpose by assigning tasks and
-objective -- both secular and collective. Charitable work, shared
-worship, and other communal practices can promote reciprocity, mutual
-support, and a shared responsibility that elevates abstract values into
-concrete goals. Notably, collective purposes have been shown to enhance
-the cooperative effects of collective activities, which may favour
-religious service in processes of cultural selection
-(\citeproc{ref-reddish2013let}{Reddish \emph{et al.} 2013}). Why
-religious attendance might amplify meaning and (especially) purpose
-awaits future inquiries.
+end in itself (\citeproc{ref-sosis2003cooperation}{Sosis and Bressler
+2003}). Another compatible explanation is that religious service confers
+purpose by assigning tasks and objective -- both secular and collective.
+Charitable work, shared worship, and other communal practices can
+promote reciprocity, mutual support, and a shared responsibility that
+elevates abstract values into concrete goals. Notably, collective
+purposes have been shown to enhance the cooperative effects of
+collective activities, which may favour religious service in processes
+of cultural selection (\citeproc{ref-reddish2013let}{Reddish \emph{et
+al.} 2013}). However, why religious attendance might amplify meaning and
+(especially) purpose awaits future inquiries.
 
 We also observe a positive causal association between regular attendance
 and gratitude. In classical Christian thought (for example, Aquinas),
@@ -1124,13 +1138,13 @@ al.} 2004}; \citeproc{ref-mccullough2001gratitude}{McCullough \emph{et
 al.} 2001}). In any case, the conjecture that religious participation
 expresses gratitude is consistent with our findings.
 
-We also find that religious attendance is causally associated with
-modest improvements in sexual satisfaction. Earlier cross-sectional
-studies have observed correlations between religiosity and marital
-sexual satisfaction (\citeproc{ref-dew2020joint}{Dew \emph{et al.}
-2020}). Although these studies do reliably estimate causal magnitudes,
-our results suggest a genuine but modest causal effect. Again, our
-purposes here are descriptive, and we do not evaluate specific theories.
+We find that religious attendance is causally associated with modest
+improvements in sexual satisfaction. Earlier cross-sectional studies
+have observed correlations between religiosity and marital sexual
+satisfaction (\citeproc{ref-dew2020joint}{Dew \emph{et al.} 2020}).
+Although these studies do reliably estimate causal magnitudes, our
+results suggest a genuine but modest causal effect. Again, our purposes
+here are descriptive, and we do not evaluate specific theories.
 Speculating, religious service might align values, enhance
 communication, and foster stable social support networks within couples,
 thereby strengthening intimacy and trust and reduce conflict. From a
@@ -1162,13 +1176,21 @@ time and attention in ways that shape diverse health outcomes, even if
 the overall patterns are more modest than those observed for meaning,
 gratitude, sexual satisfaction, and a sense of purpose
 
-In summary, our findings show that religious service attendance can
-enrich certain facets of well-being, especially meaning, gratitude,
-sexual satisfaction, and a sense of purpose. We find only limited
-evidence for broader effects on other domains. Future research might
-consider different populations and subgroups within New Zealand and
-examine proximate and evolutionary mechanisms by which religious service
-affects well-being. As with all causal investigations, we should also
+In summary, our findings show that in New Zeland, religious service
+attendance can enrich certain facets of well-being, especially meaning,
+gratitude, sexual satisfaction, and a sense of purpose. We find only
+limited evidence for broader effects on other domains. Future research
+might consider different populations and subgroups within New Zealand,
+and a wider range of populations
+(\citeproc{ref-johnson2022global}{Johnson and VanderWeele 2022};
+\citeproc{ref-price2024science}{Price and Johnson 2024}). Such research
+should also examine proximate and evolutionary mechanisms by which
+religious service affects well-being, broadly conceived to include
+biological well-being (\citeproc{ref-shaver2024religious}{Shaver
+\emph{et al.} 2024}; \citeproc{ref-spake2024practical}{Spake \emph{et
+al.} 2024}) and where possible, include objective measures both of
+attendance and well-being (\citeproc{ref-shaver2021comparison}{Shaver
+\emph{et al.} 2021}). As with all causal investigations, we should also
 remain mindful that a practice that benefits certain groups, on average,
 may not benefit every individual similarly. We recommend care when
 imparting individual advice.
@@ -1726,9 +1748,9 @@ Some of The Time, 3 = Most of The Time, 4 = All of The Time.
 (\citeproc{ref-nolen-hoeksema_effects_1993}{Nolen-hoeksema and Morrow
 1993})
 
-\subsubsection{Present Focused}\label{present-focused}
+\subsubsection{Present Focussed}\label{present-focussed}
 
-\paragraph{Bodysat}\label{bodysat}
+\paragraph{Body Satisfaction}\label{body-satisfaction}
 
 \emph{I am satisfied with the appearance, size and shape of my body.}
 
@@ -1773,7 +1795,7 @@ to 7 = Strongly Agree). Combines Berry \emph{et al.}
 Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
 (\citeproc{ref-rice_short_2014}{Rice \emph{et al.} 2014})
 
-\paragraph{Pwb Standard Living}\label{pwb-standard-living-1}
+\paragraph{PWB Standard Living}\label{pwb-standard-living-1}
 
 \emph{Please rate your level of satisfaction with the following aspects
 of your life\ldots Your standard of living.}
@@ -1791,7 +1813,7 @@ Ordinal response (0 = completely dissatisfied to 10 = completely
 satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
 al.} 2003})
 
-\paragraph{Pwb your Health}\label{pwb-your-health}
+\paragraph{PWB Your Health}\label{pwb-your-health}
 
 \emph{Please rate your level of satisfaction with the following aspects
 of your life\ldots Your health.}
@@ -1800,7 +1822,7 @@ Ordinal response (0 = completely dissatisfied to 10 = completely
 satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
 al.} 2003})
 
-\paragraph{Pwb your Relationships}\label{pwb-your-relationships}
+\paragraph{PWB Your Relationships}\label{pwb-your-relationships}
 
 \emph{Please rate your level of satisfaction with the following aspects
 of your life\ldots Your personal relationships.}
@@ -1816,7 +1838,7 @@ al.} 2003})
 Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
 (\citeproc{ref-tangney_high_2004}{Tangney \emph{et al.} 2004})
 
-\paragraph{Self Control Wish more
+\paragraph{Self Control Wish More
 Reversed}\label{self-control-wish-more-reversed}
 
 \emph{I wish I had more self-discipline.}
@@ -1824,7 +1846,7 @@ Reversed}\label{self-control-wish-more-reversed}
 Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
 (\citeproc{ref-tangney_high_2004}{Tangney \emph{et al.} 2004})
 
-\paragraph{Self Esteem}\label{self-esteem}
+\paragraph{Self-Esteem}\label{self-esteem}
 
 \begin{itemize}
 \tightlist
@@ -1847,7 +1869,7 @@ Participants were asked to report their sexual orientation; ordinal
 response: 1 = Not satisfied to 7 = Very satisfied. Developed for the
 NZAVS
 
-\subsubsection{Life Focused}\label{life-focused}
+\subsubsection{Life Focussed}\label{life-focussed}
 
 \paragraph{Gratitude}\label{gratitude-1}
 
@@ -1865,7 +1887,7 @@ NZAVS
 Ordinal response scale 1 = Strongly Disagree to 7 = Strongly Agree.
 (\citeproc{ref-mccullough_grateful_2002}{McCullough \emph{et al.} 2002})
 
-\paragraph{Lifesat}\label{lifesat}
+\paragraph{Life Satisfaction}\label{life-satisfaction}
 
 \begin{itemize}
 \tightlist
@@ -2987,6 +3009,11 @@ Instrument Ware Jr, J, and Sherbourne, C (1992) The MOS 36-item
 short-form health survey (SF-36): I. Conceptual framework and item
 selection. \emph{Medical Care}, \textbf{30}(6), 473--483.
 
+\bibitem[\citeproctext]{ref-johnson2022global}
+Johnson, BR, and VanderWeele, TJ (2022) The global flourishing study: A
+new era for the study of well-being. \emph{International Bulletin of
+Mission Research}, \textbf{46}(2), 272--275.
+
 \bibitem[\citeproctext]{ref-jokela2024_church}
 Jokela, M, and Laakasuo, M (2024) Health trajectories of individuals who
 quit active religious attendance: Analysis of four prospective cohort
@@ -3068,6 +3095,11 @@ Polley, E, LeDell, E, Kennedy, C, and van der Laan, M (2023b)
 \emph{SuperLearner: Super learner prediction}. Retrieved from
 \url{https://github.com/ecpolley/SuperLearner}
 
+\bibitem[\citeproctext]{ref-price2024science}
+Price, ME, and Johnson, DD (2024) Science and religion around the world:
+Compatibility between belief systems predicts increased well-being.
+\emph{Religion, Brain \& Behavior}, 1--20.
+
 \bibitem[\citeproctext]{ref-reddish2013let}
 Reddish, P, Fischer, R, and Bulbulia, J (2013) Let's dance together:
 Synchrony, shared intentionality and cooperation. \emph{PloS One},
@@ -3123,6 +3155,12 @@ Shaver, JH, Troughton, G, Sibley, CG, and Bulbulia, JA (2016) Religion
 and the unmaking of prejudice toward muslims: Evidence from a large
 national sample. \emph{PloS One}, \textbf{11}(3), e0150209.
 
+\bibitem[\citeproctext]{ref-shaver2021comparison}
+Shaver, JH, White, TA, Vakaoti, P, and Lang, M (2021) A comparison of
+self-report, systematic observation and third-party judgments of church
+attendance in a rural fijian village. \emph{Plos One}, \textbf{16}(10),
+e0257160.
+
 \bibitem[\citeproctext]{ref-shaver2022integrating}
 Shaver, J, and White, T (2022) Integrating pacific research
 methodologies with western social science research methods: Quantifying
@@ -3155,6 +3193,17 @@ Psychology}, \textbf{40}(3), 142--159.
 Sidanius, J, and Pratto, F (1999) \emph{Social dominance: An intergroup
 theory of social hierarchy and oppression}, Cambridge: Cambridge
 University Press.
+
+\bibitem[\citeproctext]{ref-sosis2003cooperation}
+Sosis, R, and Bressler, ER (2003) Cooperation and commune longevity: A
+test of the costly signaling theory of religion. \emph{Cross-Cultural
+Research}, \textbf{37}(2), 211--239.
+
+\bibitem[\citeproctext]{ref-spake2024practical}
+Spake, L, Hassan, A, Schaffnit, SB, et al.others (2024) A practical
+guide to cross-cultural and multi-sited data collection in the
+biological and behavioural sciences. \emph{Proceedings of the Royal
+Society B}, \textbf{291}(2021), 20231422.
 
 \bibitem[\citeproctext]{ref-steger_meaning_2006}
 Steger, MF, Frazier, P, Oishi, S, and Kaler, M (2006) The meaning in
