--- a/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
+++ b/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
@@ -163,6 +163,7 @@ var_labels_baseline <- c(
   "nzsei_13_l" = "NZSEI (Occupational Prestige Index)",
   "parent_binary" = "Parent (binary)",
   "partner_binary" = "Partner (binary)",
+   "religion_bigger_denominations" = "Religious Denomination",
   "rural_gch_2018_l" = "Rural Gch 2018 Levels",
   "rwa" = "Right Wing Authoritarianism",
   "sample_frame_opt_in_binary" = "Sample Frame Opt-In (binary)",
@@ -191,11 +192,11 @@ label_mappings_all <- list(
 )
 
 label_mappings_all
-exposure_vars
+exposure_var
 
-appendix_text_version_1 <- boilerplate_measures(
+appendix_text_version_1 <- boilerplate::boilerplate_measures(
   baseline_vars = baseline_vars,
-  exposure_var = exposure_vars,
+  exposure_var = exposure_var,
   outcome_vars = outcome_vars,
   measure_data = measures_data,
   label_mappings = label_mappings_all
