coop church - long
getting workflow in place

--- a/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
+++ b/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
@@ -147,7 +147,8 @@ baseline_vars
 # exposure
 raw_outcomes
 
-
+# get n participants
+n_participants <- margot::here_read("n_participants")
 
 # labels
 var_labels_baseline <- c(
