--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
@@ -120,8 +120,15 @@ measures_path <- fs::path_expand("/Users/joseph/GIT/templates/measures/data/merg
 # read measures data
 measures_data <- read_rds(measures_path)
 measures_data
-# set data paths
-push_mods <- here::here("/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-jb-church-fl-long")
+# # set data paths
+# push_mods <- here::here("/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-jb-church-fl-long")
+
+
+# models
+# m4
+
+# import data (obtain from NZAVS)
+dat <- margot::here_read_qs("nzavs_data", pull_path)
 
 
 # missing at baseline
@@ -159,7 +166,6 @@ raw_outcomes_health
 var_labels_baseline <- c(
   "sdo" = "Social Dominance Orientation",
   "born_nz_binary" = "Born in NZ",
-  "rural_gch_2018_l" = "Rural Gch 2018 Levels",
   "education_level_coarsen" = "Education Level",
   "employed_binary" = "Employed (binary)",
   "eth_cat" = "Ethnicity",
@@ -170,6 +176,8 @@ var_labels_baseline <- c(
   "nzsei_13_l" = "NZSEI (Occupational Prestige Index)",
   "parent_binary" = "Parent (binary)",
   "partner_binary" = "Partner (binary)",
+  "religion_bigger_denominations" = "Religious Denomination",
+  "rural_gch_2018_l" = "Rural Gch 2018 Levels",
   "rwa" = "Right Wing Authoritarianism",
   "sample_frame_opt_in_binary" = "Sample Frame Opt-In (binary)",
   "sdo" = "Social Dominance Orientation",
@@ -227,6 +235,7 @@ label_mapping_raw_social <- list(
 )
 
 
+
 label_mappings_all <- list(
   baseline = var_labels_baseline,
   exposure = label_mapping_raw_exposure,
@@ -238,12 +247,13 @@ label_mappings_all <- list(
 )
 
 
+
 all_outcomes <- list(
-  health          = raw_outcomes_health,
-  psychological   = raw_outcomes_psych,
-  present_focussed         = raw_outcomes_present,  # changed to match label_mappings_all
-  life_focussed            = raw_outcomes_life,     # changed to match label_mappings_all
-  social          = raw_outcomes_social
+  health = raw_outcomes_health,
+  psychological = raw_outcomes_psych,
+  present_focussed  = raw_outcomes_present,  
+  life_focussed  = raw_outcomes_life,    
+  social = raw_outcomes_social
 )
 
 appendix_text_version_1 <- boilerplate_measures(
