coop church long

--- a/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
+++ b/manuscripts/24-jb-church-COOP-LONG/24-jb-church-COOP-LONG.qmd
@@ -23,7 +23,7 @@ author:
     orcid: 0000-0002-4064-8800
 keywords: [Use, use]
 editor_options: 
-    chunk_output_type: inline
+    chunk_output_type: console
 format:
   pdf:  
     bibliography: /Users/joseph/GIT/templates/bib/references.bib
@@ -114,7 +114,7 @@ measures_data <- read_rds(measures_path)
 measures_data
 
 # define name
-nice_exposure_name <- glue::glue("Religious Attendance Rates")
+nice_exposure_name <- gluxe::glue("Religious Attendance Rate")
 
 # old macs
 # push_mods <- here::here("/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-jb-church-coop-long")
@@ -212,7 +212,7 @@ set.seed(123)
 # import untransformed data for graphs
 original_df <- margot::here_read_qs('df_wide_impute', push_mods)
 
-# summary tables
+# summary tables ( old workflow )
 # summary_tables <- margot::here_read_qs("summary_tables", push_mods)
 
 # read nzavs timeline
@@ -245,8 +245,6 @@ n_total <-  margot::here_read("n_total")
 # total
 n_total
 
-# participants
-n_participants <- summary_tables$n_participants
 
 # make pretty number
 n_participants<- prettyNum(n_participants,big.mark=",")
@@ -349,8 +347,15 @@ options_social_religious_vs_secular <- margot_plot_create_options(
 
 
 # read models
- lmtp_output <- margot::here_read_qs("lmtp_output_lmtp_output", push_mods)
 lmtp_output <- margot::here_read_qs("coop_church_long_lmtp_output", push_mods)
+
+lmtp_output$models$t5_charity_donate_z$t5_charity_donate_z_religious$outcome_reg
+lmtp_output$models$t5_charity_donate_z$t5_charity_donate_z_religious$density_ratios
+lmtp_output$models$t5_hours_charity_z$t5_hours_charity_z_religious$density_ratios
+lmtp_output$models$t5_hours_charity_z$t5_hours_charity_z_secular$density_ratios
+
+
+
 
 # all combinations of results (many!)
 
